# xlsx-ty

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
