# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bxlsx"
version = "1.0.0"
description = "fill xlsx file"
readme = "README.md"
authors = [{ name = "Biplove Lamichhane", email = "lcbiplove1@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/lcbiplove/xlsx-ty"

[project.scripts]
bxlsx = "bxlsx:main"